[package]
name = "cpsnarks-set"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
accumulator = { path = "../accumulator" }
quick-error = "1.2.3"
rug = "1.7.0"
algebra-core = { path = "../zexe/algebra-core" }
algebra = { path = "../zexe/algebra", features = ["bls12_381"]}
merlin = "2.0.0"
rand = { version = "0.7" }
r1cs-core = { path = "../zexe/r1cs-core" }
r1cs-std = { path = "../zexe/r1cs-std" }
crypto-primitives = { path = "../zexe/crypto-primitives", features = ["r1cs"]}
legogro16 = { path = "../zexe/legogro16" }
curve25519-dalek = { version = "2" }
bulletproofs = { version = "2", optional = true }
digest = "0.7.6"
blake2 = "0.7.1"
hex = "0.4.2"

[features]
dalek = ["bulletproofs"]
zexe = []
default = ["zexe"]

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "root"
harness = false

[[bench]]
name = "modeq"
harness = false

[[bench]]
name = "rsa"
harness = false

[[bench]]
name = "membership"
harness = false
