[package]
name = "cpsnarks-set"
version = "0.1.0"
authors = ["Kobi Gurkan <kobigurk@gmail.com>"]
edition = "2018"

[dependencies]
accumulator = { git = "ssh://git@github.com/kobigurk/cpsnarks-set-accumulator.git" }
quick-error = "1.2.3"
rug = "1.7.0"
algebra-core = { git = "https://github.com/scipr-lab/zexe" }
algebra = { git = "https://github.com/scipr-lab/zexe", features = ["bls12_381"]}
merlin = "2.0.0"
rand = { version = "0.7" }
r1cs-core = { git = "https://github.com/scipr-lab/zexe" }
r1cs-std = { git = "https://github.com/scipr-lab/zexe" }
crypto-primitives = { git = "https://github.com/scipr-lab/zexe", features = ["r1cs"]}
legogro16 = { git = "ssh://git@github.com/kobigurk/legogro16.git" }
curve25519-dalek = { version = "2", optional = true, features = ["serde", "simd_backend"] }
bulletproofs = { git = "https://github.com/dalek-cryptography/bulletproofs", branch = "develop", optional = true, features = ["yoloproofs"] }
digest = "0.7.6"
blake2 = "0.7.1"

[features]
dalek = ["curve25519-dalek", "bulletproofs"]
zexe = []
default = ["zexe"]

[dev-dependencies]
criterion = "0.3"

[lib]
bench = false

[[bench]]
name = "root"
harness = false
required-features = ["zexe"]

[[bench]]
name = "modeq"
harness = false
required-features = ["zexe"]

[[bench]]
name = "rsa"
harness = false
required-features = ["zexe"]

[[bench]]
name = "membership_prime"
harness = false
required-features = ["zexe"]

[[bench]]
name = "membership_hash"
harness = false
required-features = ["zexe"]

[[bench]]
name = "membership_class"
harness = false
required-features = ["zexe"]

[[bench]]
name = "membership_bp"
harness = false
required-features = ["dalek"]

[[bench]]
name = "snark_range"
harness = false
required-features = ["zexe"]
